# TuyaOpen-GigaDevice

./: .gitignore  CMakeLists.txt  Kconfig  README.md  allconfig  build_example.py  default.config  platform_config.cmake  platform_prepare.py  set_extensions.cmake  toolchain_file.cmake
gd32_os/: .app  CMakeLists.txt  cmake_build.bat  cmake_build.sh  release_notes.txt
gd32_os/MBL/mainboot/: CMakeLists.txt  mbl.c  mbl_image_validate.c  mbl_image_validate.h  mbl_includes.h  mbl_region.h
gd32_os/MBL/mainboot/mlib/: flash.c  flash.h  systick.c  systick.h  uart.c  uart.h  xmodem.c  xmodem.h
gd32_os/MBL/project/: mbl_afterbuild.bat  mbl_prebuild.bat
gd32_os/MBL/project/eclipse/: .cproject  .project  mbl.ld  openocd_gdlink.cfg  openocd_jlink.cfg
gd32_os/MBL/project/segger/: GD32VW553x_Registers.xml  MBL.emProject  MBL.emSession
gd32_os/MSDK/: CMakeLists.txt
gd32_os/MSDK/FatFS/: CMakeLists.txt
gd32_os/MSDK/FatFS/port/: fatfs.c  fatfs.h  wear_levelling_flash.c  wear_levelling_flash.h
gd32_os/MSDK/FatFS/src/: 00history.txt  diskio.c  ffconf.h  ffsystem.c
gd32_os/MSDK/app/: 802_1x_EAP_TLS_certs.c  CMakeLists.txt  _build_date.h  app_cfg.h  atcmd.c  atcmd.h  atcmd_azure.c  atcmd_azure.h  atcmd_httpc.c  atcmd_httpc.h  atcmd_mqtt.c  atcmd_mqtt.h  atcmd_tcpip.c  atcmd_tcpip.h  atcmd_tuya.c  atcmd_tuya.h  atcmd_wifi.c  atcmd_wifi.h  cmd_coap.c  cmd_gpio.c  cmd_gpio.h  cmd_rftest.h  cmd_shell.c  cmd_shell.h  iap_command.c  iap_command.h  iperf.c  main.c  ota_demo.c  ota_demo.h  ping.c  ping.h  rftest_cfg.h
gd32_os/MSDK/app/atcmd_ota_demo/: atcmd_dfu.c  atcmd_dfu.h  atcmd_ota_certs.c  atcmd_ota_demo.c  atcmd_ota_demo.h
gd32_os/MSDK/app/mqtt_app/: mqtt5_client_config.c  mqtt5_client_config.h  mqtt_client_config.c  mqtt_client_config.h  mqtt_cmd.c  mqtt_cmd.h  mqtt_ssl_config.c
gd32_os/MSDK/app/play_music/: atcmd_play_music.c  atcmd_play_music.h
gd32_os/MSDK/ble/: CMakeLists.txt
gd32_os/MSDK/ble/app/: app_adapter_mgr.c  app_adapter_mgr.h  app_adv_mgr.c  app_adv_mgr.h  app_bass.c  app_bass.h  app_blue_courier.h  app_blue_courier_link.c  app_blue_courier_link.h  app_blue_courier_prot.c  app_cmd.c  app_cmd.h  app_cmd_rftest.h  app_conn_mgr.c  app_conn_mgr.h  app_cscss.c  app_cscss.h  app_datatrans_srv.c  app_datatrans_srv.h  app_dev_mgr.c  app_dev_mgr.h  app_dfu_cli.c  app_dfu_cli.h  app_dfu_def.h  app_dfu_srv.c  app_dfu_srv.h  app_diss.c  app_diss.h  app_flash.c  app_flash.h  app_gatt_bqb.c  app_gatt_bqb.h  app_http_proxy_client.c  app_http_proxy_client.h  app_http_proxy_server.c  app_http_proxy_server.h  app_iso_mgr.c  app_iso_mgr.h  app_l2cap.c  app_l2cap.h  (+20 more)
gd32_os/MSDK/ble/profile/: ble_profile_utils.c  ble_profile_utils.h
gd32_os/MSDK/blesw/: CMakeLists.txt
gd32_os/MSDK/gdfunc/: es8375_driver.h  gd_music_play.h
gd32_os/MSDK/gdfunc/lc3/: README.md  lc3_play.h
gd32_os/MSDK/gdfunc/ota/: gd_wifi_ota.h
gd32_os/MSDK/lwip/: CMakeLists.txt  includelist.txt  sourcelist.txt
gd32_os/MSDK/lwip/iperf/: CMakeLists.txt  net_iperf.h  net_iperf_al.h
gd32_os/MSDK/lwip/libcoap/: .pre-commit-config.yaml  AUTHORS  BUILDING  CMakeLists.txt  CONTRIBUTE  ChangeLog  HOWTO.dual.gnutls  HOWTO.dual.openssl  HOWTO.dual.softhsm2  LICENSE  Makefile.am  README.md  TODO  autogen.sh  cmake_coap_config.h.in  cmake_coap_defines.h.in  coap_config.h.contiki  coap_config.h.riot  coap_config.h.windows  configure.ac  get_config.sh  libcoap-3.map  libcoap-3.sym
gd32_os/MSDK/lwip/lwip-2.2.0/: CMakeLists.txt
gd32_os/MSDK/lwip/sntp/: sntp_api.c  sntp_api.h
gd32_os/MSDK/lwip/tinyws/: tinyws.c  tinyws.h  ws_ssl.c  ws_ssl.h
gd32_os/MSDK/macsw/: CMakeLists.txt
gd32_os/MSDK/macsw/export/: _build_version.h  co_bit.h  co_bool.h  co_int.h  co_list.h  co_math.h  co_utils.h  mac_cfm.h  mac_frame.h  mac_types.h  macif_api.h  macif_priv.h  macif_rx_def.h  macif_types.h  macif_vif.h  version.h  wifi_export.h  wlan_config.h
gd32_os/MSDK/macsw/import/: dbg_import.h  lwip_import.h  rtos_import.h  wifi_import.h
gd32_os/MSDK/mbedtls/: CMakeLists.txt
gd32_os/MSDK/mbedtls/demo/: ssl_certs.c  ssl_client.c
gd32_os/MSDK/mbedtls/mbedtls/: .mypy.ini  .pylintrc  .readthedocs.yaml  BRANCHES.md  CMakeLists.txt  ChangeLog  Makefile  README.md  SECURITY.md
gd32_os/MSDK/plf/: CMakeLists.txt
gd32_os/MSDK/plf/GD32VW55x_standard_peripheral/: CMakeLists.txt  gd32vw55x_libopt.h
gd32_os/MSDK/plf/riscv/: CMakeLists.txt
gd32_os/MSDK/plf/src/: CMakeLists.txt  bsp.c  bsp.h  dsp.c  dsp.h  gd32vw55x_platform.c  (+8 more)
gd32_os/MSDK/projects/: image_afterbuild.bat  image_prebuild.bat
gd32_os/MSDK/rtos/: CMakeLists.txt
gd32_os/MSDK/util/: CMakeLists.txt
gd32_os/MSDK/wifi_manager/: CMakeLists.txt  state_machine.h  wifi_eloop.c  wifi_eloop.h  wifi_init.c  wifi_init.h  wifi_management.c  wifi_management.h  wifi_net_ip.c  wifi_net_ip.h  wifi_netlink.c  wifi_netlink.h  wifi_softap_provisioning.c  wifi_softap_provisioning.h  wifi_vif.c  wifi_vif.h  wifi_wpa.c  wifi_wpa.h
gd32_os/MSDK/wpa_supplicant/: CONTRIBUTIONS  README
gd32_os/ROM-EXPORT/bootloader/: rom_api.h  rom_export.h  rom_export_mbedtls.h  rom_ibl_state.h  rom_image.h  rom_sys.h  rom_trace.h
gd32_os/ROM-EXPORT/halcomm/: rom_flash.h  rom_region.h
gd32_os/ROM-EXPORT/symbol/: rom_symbol_m.gcc
gd32_os/config/: config_gdm32.h  platform_def.h
gd32_os/scripts/: setup.bat  setup_debugger_env.sh
gd32_os/scripts/images/: readme.txt
gd32_os/scripts/imgtool/: aestool.py  bin2array.py  gentool.py  hextool.py  imgtool.py  macro_parser.py  sysset.py
tuyaos/tuyaos_adapter/: CMakeLists.txt
tuyaos/tuyaos_adapter/src/: tkl_adc.c  tkl_asymmetrical.c  tkl_bluetooth.c  tkl_bluetooth_bredr.c  tkl_bluetooth_mesh_device.c  tkl_bluetooth_mesh_prov.c  tkl_bluetooth_sm.c  tkl_display.c  tkl_flash.c  tkl_fs.c  tkl_gpio.c  tkl_hash.c  tkl_hci.c  tkl_i2c.c  tkl_lwip.c  tkl_memory.c  tkl_mutex.c  tkl_network.c  tkl_ota.c  tkl_output.c  tkl_pinmux.c  tkl_pwm.c  tkl_qspi.c  tkl_queue.c  tkl_rtc.c  tkl_semaphore.c  tkl_sleep.c  tkl_spi.c  tkl_symmetry.c  tkl_system.c  tkl_thread.c  tkl_timer.c  tkl_uart.c  tkl_wakeup.c  tkl_watchdog.c  tkl_wifi.c  tkl_wifi_hostap.c  tuya_ble_hal.c
(+1909 files in other folders)
